--- a/public/global.css
+++ b/public/global.css
@@ -6,7 +6,7 @@
 html {
     box-sizing: border-box;
     font-size: 16px;
-    height: 100%;
+    /* height: 100%; */
     user-select: none;
   }
   
@@ -18,6 +18,8 @@ html {
     margin: 0;
     padding: 0;
     font-weight: normal;
+
+    overflow: hidden;
   }
 
   ol, ul {
