Fully implement map mirroring.
Implement Norfair and Ridley's lair areas.  Next up is some more painful work on the map room ratios layout, and then we'll get back to fun stuff like tweaking the overlays and implementing new marker types.

--- a/public/global.css
+++ b/public/global.css
@@ -45,6 +45,10 @@ html {
     background-image: url(/images/zebes-quarterscale.png);
   }
 
+  .mirrored-h .room {
+			transform: scaleX(-1);
+  }
+
   .map-grid-container {
     height: 100%;
     display: flex;
