--- a/src/styles/overlays.scss
+++ b/src/styles/overlays.scss
@@ -52,3 +52,42 @@
 			background: linear-gradient(180deg, rgb(255, 255, 255) 16%, rgb(206, 206, 206) 92%, transparent 95%, rgb(206, 206, 206) 99%, rgb(206, 206, 206) 102%, rgb(206, 206, 206) 106%, rgb(206, 206, 206) 110%, rgb(206, 206, 206) 113%), linear-gradient(24.75deg, rgb(255, 255, 255) 33%, rgb(206, 206, 206) 37%, transparent 41%, rgb(206, 206, 206) 44%, rgb(206, 206, 206) 48%, rgb(206, 206, 206) 51%, rgb(206, 206, 206) 55%, rgb(206, 206, 206) 59%) transparent;
 		}
 	}
+
+
+	//  Mouse shortcut overlay styles
+	.mouse-overlay {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 1.5rem;
+		height: 1rem;
+		border-radius: 50% 50% 0 0;
+		border: 0px;
+		font-size: 0.20rem;
+		font-weight: bold;
+		color: black;
+		background: conic-gradient(white 0%, white 5%, silver 16%, white 23%, white 24%, silver 28%, gray 34%, #666 50%, gray 65%, white 75%) transparent;
+
+		&.hide-overlay {
+			display: none;
+		}
+
+		&:before {
+			content: attr(data-before);
+			position: absolute;
+			display: block;
+			top: 0.05rem;
+			right: 0.15rem;
+			width: 1.2rem;
+			height: 0.80rem;
+			border-radius: 50% 50% 0 0;
+			box-sizing: border-box;
+			padding: 0rem;
+			font-size: 0.8rem;
+			font-family: Arial;
+			font-weight: normal;
+			box-shadow: inset 0 0 0.13rem #fff, 0 0 0.13rem #fff,
+						rgb(124, 124, 124) 0px 0px 0.43rem inset;
+			background: linear-gradient(180deg, rgb(255, 255, 255) 16%, rgb(206, 206, 206) 92%, transparent 95%, rgb(206, 206, 206) 99%, rgb(206, 206, 206) 102%, rgb(206, 206, 206) 106%, rgb(206, 206, 206) 110%, rgb(206, 206, 206) 113%), linear-gradient(24.75deg, rgb(255, 255, 255) 33%, rgb(206, 206, 206) 37%, transparent 41%, rgb(206, 206, 206) 44%, rgb(206, 206, 206) 48%, rgb(206, 206, 206) 51%, rgb(206, 206, 206) 55%, rgb(206, 206, 206) 59%) transparent;
+		}
+	}
